ta2-search update

--- a/python/conf/test-185.conf
+++ b/python/conf/test-185.conf
@@ -1,13 +1,15 @@
 {
-        "problem_schema": "/tmp/data/185_baseball/TEST/problem_TEST/problemDoc.json",
-        "problem_root": "/tmp/data/185_baseball/TEST/problem_TEST",
-        "dataset_schema": "/tmp/data/185_baseball/TEST/dataset_TEST/datasetDoc.json",
-        "test_data_root": "/tmp/data/185_baseball/TEST/dataset_TEST",
-        "pipeline_logs_root": "/tmp/results/185_baseball/logs",
-        "executables_root": "/tmp/results/185_baseball/executables",
-        "results_root": "/tmp/results/185_baseball/outputs",
-        "temp_storage_root": "/tmp/results/185_baseball/temp",
-        "timeout": 60,
+        "problem_schema": "/nas/home/kyao/dsbox/data/datadrivendiscovery.org/data/seed_datasets_current/185_baseball/185_baseball_problem/problemDoc.json",
+        "problem_root": "/nas/home/kyao/dsbox/data/datadrivendiscovery.org/data/seed_datasets_current/185_baseball/185_baseball_problem/",
+        "dataset_schema": "/nas/home/kyao/dsbox/data/datadrivendiscovery.org/data/seed_datasets_current/185_baseball/185_baseball_dataset/datasetDoc.json",
+        "test_data_root": "/nas/home/kyao/dsbox/data/datadrivendiscovery.org/data/seed_datasets_current/185_baseball/185_baseball_dataset/",
+        "results_root": "/opt/kyao-repo/stan/dsbox-ta2/python/outputs/185_baseball/results",
+        "pipeline_logs_root": "/opt/kyao-repo/stan/dsbox-ta2/python/outputs/185_baseball/logs",
+        "executables_root": "/opt/kyao-repo/stan/dsbox-ta2/python/outputs/185_baseball/executables",
+        "temp_storage_root": "/opt/kyao-repo/stan/dsbox-ta2/python/outputs/185_baseball/temp",
+        "timeout": 3600,                                                                                                                     
         "cpus"  : "4",
-        "ram"   : "4Gi"
+        "ram"   : "4Gi",
+        "include": ["d3m.primitives.sklearn_wrap.SKAdaBoostClassifier", "LINEAR_DISCRIMINANT_ANALYSIS", "NAIVE_BAYES_CLASSIFIER"],
+        "exclude": ["d3m.primitives.sklearn_wrap.SKMultinomialNB", "d3m.primitives.sklearn_wrap.SKBernoulliNB"]
 }
